--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="z2.php" method="post">
-        <input type="text" name="broj" value="6,49,3,2,3,4,50,33,34,37,42,55,234,122">
-        <input type="submit" value="Pogledaj tablicu">
-    </form>
 
+
+    <form action="z2.php" method="post">
+        <input type="text" name="broj" placeholder="e.g 3,5,6,7,8" required>
+        <input type="submit">
+
+
+    </form>
 </body>
 </html>
